--- a/cursed/src/main/resources/application.properties
+++ b/cursed/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-spring.data.mongodb.host=mongoserver
+spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.username=[username]
+#spring.data.mongodb.password=[password]
+spring.data.mongodb.database=cursed_repo
+jwt.secret=example
