--- a/cursed/pom.xml
+++ b/cursed/pom.xml
@@ -57,6 +57,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+	 <dependency>
+	  <groupId>javax.validation</groupId>
+	  <artifactId>validation-api</artifactId>
+	  <version>2.0.1.Final</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
