--- a/cursed/src/main/resources/application.properties
+++ b/cursed/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.data.mongodb.authentication-database=admin
 #spring.data.mongodb.password=[password]
 spring.data.mongodb.database=cursed_repo
 jwt.secret=example
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306:3306/cursed_database
+spring.datasource.username=root
+spring.datasource.password=password
