--- a/cursed/pom.xml
+++ b/cursed/pom.xml
@@ -63,6 +63,12 @@
 	  <version>2.0.1.Final</version>
 	  <type>jar</type>
 	 </dependency>
+	 <dependency>
+	  <groupId>javax.persistence</groupId>
+	  <artifactId>javax.persistence-api</artifactId>
+	  <version>2.2</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
@@ -70,6 +76,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+                                
 			</plugin>
 		</plugins>
 	</build>
