--- a/cursed/src/main/resources/application.properties
+++ b/cursed/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.data.mongodb.database=cursed_repo
 jwt.secret=example
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306:3306/cursed_database
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cursed_database
 spring.datasource.username=root
 spring.datasource.password=password
