--- a/cursed/src/main/resources/application.properties
+++ b/cursed/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/cursed_databasez?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=password
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://localhost:3306/cursed_databasez?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=password
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.database=cursed_repo
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.database=cursed_repo
 jwt.secret=example
