--- a/cursed/src/main/resources/application.yml
+++ b/cursed/src/main/resources/application.yml
@@ -3,6 +3,20 @@ spring:
     mongodb:
       port: 27017
       host: localhost
+      authentication-database: admin
+      database: cursed_repo
+---
+spring:
+    datasource:
+        driverClassName: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://localhost:3306/cursed_database?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
+        username: root
+        password: password
+    jpa:
+        hibernate:
+            ddl-auto: update
+        generate-ddl: true
+        show-sql: true
 ---
 spring:
   profiles: docker
